<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="20dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/item_background"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_list_title"
                android:paddingStart="4dp"
                android:text="@string/event_title"
                android:paddingEnd="4dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/vollkorn_regular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:layout_alignParentEnd="true"
                android:textAlignment="viewEnd"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:foregroundGravity="center_vertical"
                android:id="@+id/event_list_date"
                android:layout_toEndOf="@id/event_list_title"
                android:fontFamily="@font/stardosstencil_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_list_title"
                android:id="@+id/event_list_time"
                android:text="@string/time"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:fontFamily="@font/stardosstencil_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:maxLines="2"
                android:layout_below="@id/event_list_time"
                android:id="@+id/event_list_desc"
                android:text="@string/event_description"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:fontFamily="@font/vollkorn_regular"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>