<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:background="@color/light_yellow">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_title"
            android:padding="5dp"
            android:background="@drawable/seperator_background"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_textInputLayout">
            <EditText
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title_for_event"
                android:inputType="text"
                android:maxLines="1"
                android:lines="1"
                android:maxLength="40"
                android:padding="10dp"
                android:background="@drawable/textview_background"
                android:fontFamily="@font/vollkorn_regular"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:padding="5dp"
            android:background="@drawable/seperator_background"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc_textInputLayout">
        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textAlignment="textStart"
            android:inputType="text|textMultiLine"
            android:hint="@string/enter_event_description"
            android:nestedScrollingEnabled="true"
            tools:targetApi="lollipop"
            android:fontFamily="@font/vollkorn_regular"/>
        </android.support.design.widget.TextInputLayout>
        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="clock"
            android:numbersBackgroundColor="@color/blueish"
            android:numbersSelectorColor="@color/darker_blueish"
            android:background="@color/darker_blueish"
            android:headerBackground="@color/brandeis_blue"
            android:numbersTextColor="@color/pastel_orange"
            >

        </TimePicker>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:verticalScrollbarPosition="left"
            android:calendarTextColor="@color/pastel_orange"
            android:id="@+id/date_picker"
            tools:targetApi="lollipop"
            android:headerBackground="@color/orangy_red"
            android:background="@color/light_orange"
            >

        </DatePicker>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"

                android:layout_marginStart="56dp"
                android:id="@+id/save_button"
                android:text="@string/save_button"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                android:layout_toEndOf="@+id/save_button"

                android:textAlignment="center"
                android:text="@string/remove"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>